--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,4 @@ PRICE_ID="replace_me"
 NEXT_PUBLIC_STRIPE_KEY="replace_me"
 HOSTNAME="http://localhost:3000"
 NEXT_PUBLIC_PROJECT_PLANNER_ID="replace_me"
+NEXT_PUBLIC_SKIP_EVENT=true
