--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,12 @@
+HOSTNAME="http://localhost:3000"
 DATABASE_URL="postgresql://postgres:example@localhost:5432/postgres"
 GOOGLE_CLIENT_ID="replace_me"
 GOOGLE_CLIENT_SECRET="replace_me"
-NEXTAUTH_SECRET="make_this_something_secret"
+NEXTAUTH_SECRET="openssl rand -base64 32"
 STRIPE_API_KEY="replace_me"
 STRIPE_WEBHOOK_SECRET="replace_me"
 PRICE_ID="replace_me"
 NEXT_PUBLIC_STRIPE_KEY="replace_me"
-HOSTNAME="http://localhost:3000"
+NEXT_PUBLIC_STRIPE_MANAGE_URL="replace_me"
 NEXT_PUBLIC_PROJECT_PLANNER_ID="replace_me"
 NEXT_PUBLIC_SKIP_EVENT=true
