including the refactored changelog directly into the template instead of using rewrites

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/lodash": "^4.17.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.30.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.368.0",
@@ -43,6 +44,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-markdown": "^9.0.1",
     "server-only": "^0.0.1",
     "stripe": "^15.1.0",
     "tailwind-merge": "^2.2.2",
